--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ MJ_APIKEY_PRIVATE=b3a42b20573b66c52dea832fab3e02de
 MJ_SENDER_EMAIL=app.hatchery.dev@gmail.com
 MJ_SENDER_NAME=SuperFit Gym Hub
 PORT=5000
+
+VITE_GYM_NAME=BODYFORGE
