--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,33 @@ dist-ssr
 *.sln
 *.sw?
 
+# dependencies
+node_modules/
+
+# build output
+dist/
+build/
+
+# local env files
+.env
+.env.local
+.env.development
+.env.production
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# system files
+.DS_Store
+Thumbs.db
+
+# IDE folders
+.vscode/
+.idea/
+
+# misc
+*.local
 
 
